--- a/04-css/oblikovanje.css
+++ b/04-css/oblikovanje.css
@@ -49,6 +49,7 @@ h2 {
 .slika img {
     width: 100%;
     height: auto;
+    border-radius: 50%;
 }
 
 .slika {
@@ -57,3 +58,9 @@ h2 {
     float: right;
     margin-left: 2em;
 }
+
+.slika p:last-child {
+    font-size: 0.8em;
+    margin-top: 5px;
+}
+
